--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,9 +1,13 @@
 .md-search__form {
-  border-radius: 20px;
+    border-radius: 20px;
 }
 
 header {
-  padding: 0.2rem 0;
+    padding: 0.2rem 0;
+}
+
+label.md-nav__title {
+    display: none;
 }
 
 .md-typeset h1 {
@@ -12,11 +16,11 @@ header {
 }
 
 [dir="ltr"] .md-header__title {
-  margin-left: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 img[src*="api.iconify.design"] {
-  vertical-align: -0.2rem;
-  margin-left: 0.3rem;
-  margin-right: 0.3rem;
+    vertical-align: -0.2rem;
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
 }
